--- a/rulings/templates/search/search.html
+++ b/rulings/templates/search/search.html
@@ -1,38 +1,78 @@
 {% extends 'base.html' %}
 
+{% load highlight %}
+
 {% block body %}
-    <h2>Suche</h2>
+    <div class="row">
+        <div class="col-lg-6 col-lg-offset-2">
+            <h2>Suche</h2>
+            <form method="get" action=".">
+                <div class="input-group">
+                    {{ form.q }}
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="submit">Suchen</button>
+                    </span>
+                </div><!-- /input-group -->
+            </form>
+        </div>
+    </div>
+    {% if query %}
 
-    <form method="get" action=".">
-        {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Suche">
-                </td>
-            </tr>
-        </table>
+        <div class="row">
+            <div class="col-lg-2 col-md-3">
+                <dl>
+                    {% if facets.fields.jurisdiction %}
+                        <dt>Ebenen</dt>
+                        {% for facet in facets.fields.jurisdiction %}
+                            <dd><a href="{{ request.get_full_path }}&amp;selected_facets=jurisdiction_exact:{{ facet.0|urlencode }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
+                        {% endfor %}
+                    {% endif %}
+                    {% if facets.fields.court %}
+                        <dt>Gerichte</dt>
+                        {# Provide only the top 5 authors #}
+                        {% for facet in facets.fields.court %}
+                            <dd><a href="{{ request.get_full_path }}&amp;selected_facets=court_exact:{{ facet.0|urlencode }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
+                        {% endfor %}
+                    {% endif %}
+                    {% if facets.fields.granted %}
+                        <dt>Auskunft erteilt</dt>
+                        {# Provide only the top 5 authors #}
+                        {% for facet in facets.fields.granted %}
+                            <dd><a href="{{ request.get_full_path }}&amp;selected_facets=granted_exact:{{ facet.0|urlencode }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
+                        {% endfor %}
+                    {% endif %}
+                </dl>
+            </div>
+            <div class="col-lg-10 col-md-9">
 
-        {% if query %}
-            <h3>Results</h3>
+                <ol class="list-unstyled">
+                {% for result in page.object_list %}
+                    <li>
+                        <h4>
+                            <a href="{{ result.object.get_absolute_url }}">
+                                {{ result.object.file_reference }}
+                            </a>
+                            <small>
+                                {{ result.object.court }}
+                            </small>
+                        </h4>
+                        <p class="text-muted">
+                            {% highlight result.text with query %}
+                        </p>
+                    </li>
+                {% endfor %}
+                </ol>
+            </div>
+        </div>
 
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.file_reference }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
+        {% if page.has_previous or page.has_next %}
+            <div>
+                {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                |
+                {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+            </div>
         {% endif %}
-    </form>
+    {% else %}
+        {# Show some example queries to run, maybe query syntax, something else? #}
+    {% endif %}
 {% endblock %}
