--- a/lpgurteile/templates/base.html
+++ b/lpgurteile/templates/base.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-lg-12">
         <small>
-          <a href="https://www.correctiv.org/impressum/">Impressum</a>
+          <a href="http://www.netzwerkrecherche.de/Impressum/">Impressum</a>
         </small>
       </div>
     </div>
