--- a/lpgurteile/templates/base.html
+++ b/lpgurteile/templates/base.html
@@ -24,15 +24,27 @@
 
 <body>
   {% block base_body %}
-    <div class="container">
+    <div class="main container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="text-right">
+            <a href="http://www.netzwerkrecherche.de/">
+              <img src="{{ STATIC_URL }}img/nr-logo.png" alt="Netzwerk Recherche"/>
+            </a>
+          </div>
+        </div>
+      </div>
     {% block body %}{% endblock %}
     </div>
   {% endblock %}
 
   <footer class="container" id="footer">
   {% block footer %}
-    <div class="row">
+    <div class="row" style="margin-top: 3em">
       <div class="col-lg-12">
+        <p>
+          Ihnen sind Urteile bekannt, die uns nicht bekannt sind? <a href="mailto:presserechturteile@netzwerkrecherche.org">Schicken Sie uns die Aktenzeichen!</a> Wir werden diese Datenbank entsprechend ergänzen.
+        </p>
         <small>
           <a href="http://www.netzwerkrecherche.de/Impressum/">Impressum</a>
         </small>
