Show result count, improve search view

--- a/rulings/templates/search/search.html
+++ b/rulings/templates/search/search.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="row">
-        <div class="col-lg-6 col-lg-offset-2">
+        <div class="col-lg-8 col-lg-offset-2">
             <h2>Suche in Urteilen zu Landespressegesetzen</h2>
             <form method="get" action=".">
                 <div class="input-group">
@@ -19,12 +19,15 @@
     {% if query %}
         <div class="row" style="margin-top: 2em">
             <div class="col-lg-2 col-md-3">
+                <p class="badge">
+                    {{ page.paginator.count }} Ergebnisse
+                </p>
                 <dl>
                     {% if facets.fields.granted %}
                         <dt>Auskunft erteilt</dt>
                         {% for facet in facets.fields.granted %}
                             <dd>
-                                <a href="{{ request.get_full_path }}&amp;selected_facets=granted_exact:{{ facet.0|urlencode }}">
+                                <a href="?selected_facets=granted_exact:{{ facet.0|urlencode }}{{ getvars }}">
                                     {{ facet.0 }}</a> ({{ facet.1 }})
                             </dd>
                         {% endfor %}
@@ -33,7 +36,7 @@
                         <dt>Ebenen</dt>
                         {% for facet in facets.fields.jurisdiction %}
                             {% if facet.0 %}
-                                <dd><a href="{{ request.get_full_path }}&amp;selected_facets=jurisdiction_exact:{{ facet.0|urlencode }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
+                                <dd><a href="?selected_facets=jurisdiction_exact:{{ facet.0|urlencode }}{{ getvars }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
@@ -41,32 +44,37 @@
                         <dt>Gerichte</dt>
                         {# Provide only the top 5 authors #}
                         {% for facet in facets.fields.court %}
-                            <dd><a href="{{ request.get_full_path }}&amp;selected_facets=court_exact:{{ facet.0|urlencode }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
+                            <dd><a href="?selected_facets=court_exact:{{ facet.0|urlencode }}{{ getvars }}">{{ facet.0 }}</a> ({{ facet.1 }})</dd>
                         {% endfor %}
                     {% endif %}
                 </dl>
             </div>
             <div class="col-lg-10 col-md-9">
-
-                <ol class="list-unstyled">
-                {% for result in page.object_list %}
-                    <li>
-                        <h4>
-                            <a href="{{ result.object.get_absolute_url }}">
-                                {{ result.object.file_reference }}
-                            </a>
-                            <small>
-                                {{ result.object.court }}
-                            </small>
-                        </h4>
-                        <p class="text-muted">
-                            {% include "rulings/_granted.html" with granted=result.granted %}
-                            {% highlight result.text with query %}
-                        </p>
-                    </li>
-                {% endfor %}
-                </ol>
-                {% include "pagination.html" with page_obj=page %}
+                {% if page.object_list %}
+                    <ol class="list-unstyled">
+                    {% for result in page.object_list %}
+                        <li>
+                            <h4>
+                                <a href="{{ result.object.get_absolute_url }}">
+                                    {{ result.object.file_reference }}
+                                </a>
+                                <small>
+                                    {{ result.object.court }}
+                                </small>
+                            </h4>
+                            <p class="text-muted">
+                                {% include "rulings/_granted.html" with granted=result.granted %}
+                                {% highlight result.text with query %}
+                            </p>
+                        </li>
+                    {% endfor %}
+                    </ol>
+                    {% if page.has_previous or page.has_next %}
+                        {% include "pagination.html" with page_obj=page %}
+                    {% endif %}
+                {% else %}
+                    <p>Keine Urteile gefunden</p>
+                {% endif %}
             </div>
         </div>
     {% else %}
