--- a/rulings/templates/search/search.html
+++ b/rulings/templates/search/search.html
@@ -2,6 +2,8 @@
 
 {% load highlight %}
 
+{% block title %}Suche {{ query }}{% endblock %}
+
 {% block body %}
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
