--- a/lpgurteile/templates/base.html
+++ b/lpgurteile/templates/base.html
@@ -2,8 +2,9 @@
 <html lang="{{ LANGUAGE_CODE }}" class="no-js">
   <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{% block title %}{% endblock %}</title>
+  <title>Auskunftsrechtsdatenbank - {% block title %}{% endblock %}</title>
   <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ STATIC_URL }}css/style.css" rel="stylesheet">
   {% block extra_style %}
@@ -15,7 +16,6 @@
   {% endblock %}
 
   <link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico" />
-  <link rel="apple-touch-icon" href="{{ STATIC_URL }}img/apple-touch-icon.png"/>
 
   {% block extra_head %}
   {% endblock %}
@@ -42,12 +42,14 @@
   {% block footer %}
     <div class="row" style="margin-top: 3em">
       <div class="col-lg-12">
-        <p>
+        <p class="text-center">
           Ihnen sind Urteile bekannt, die uns nicht bekannt sind? <a href="mailto:presserechturteile@netzwerkrecherche.org">Schicken Sie uns die Aktenzeichen!</a> Wir werden diese Datenbank entsprechend ergänzen.
         </p>
-        <small>
-          <a href="http://www.netzwerkrecherche.de/Impressum/">Impressum</a>
-        </small>
+        <p class="text-center">
+          <small>
+            <a href="http://www.netzwerkrecherche.de/Impressum/">Impressum</a>
+          </small>
+        </p>
       </div>
     </div>
     {% endblock %}
