Open rulings in new window

--- a/rulings/templates/rulings/show.html
+++ b/rulings/templates/rulings/show.html
@@ -29,7 +29,7 @@
       </dd>
       <dt>Urteil im Volltext</dt>
       <dd>
-        <a href="{{ FILE_URL_PREFIX }}{{ object.filename }}">
+        <a target="_blank" href="{{ FILE_URL_PREFIX }}{{ object.filename }}">
           {{ object.file_reference }}
         </a>
       </dd>
