--- a/lpgurteile/templates/base.html
+++ b/lpgurteile/templates/base.html
@@ -27,7 +27,10 @@
     <div class="main container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="text-right">
+          <div class="text-right" style="padding-top: 15px">
+            <a href="https://www.correctiv.org/">
+              <img src="{{ STATIC_URL }}img/correctiv-logo.png" alt="Correctiv"/>
+            </a>
             <a href="http://www.netzwerkrecherche.de/">
               <img src="{{ STATIC_URL }}img/nr-logo.png" alt="Netzwerk Recherche"/>
             </a>
