Add hackish fold-in functionality

--- a/lpgurteile/templates/base.html
+++ b/lpgurteile/templates/base.html
@@ -28,7 +28,7 @@
       <div class="row">
         <div class="col-lg-8">
           <h1>Auskunfts&shy;recht&shy;datenbank</h1>
-          <p>Oft verweigern Behörden Auskünfte auf Anfragen von Journalisten. Sie berufen sich dabei in der Regel auf angebliche Ausnahmen nach den jeweils gültigen Landespressegesetzen. Dass viele dieser Antwortverweigerer damit das Gesetz brechen, ist meist unbekannt. In unserer Datenbank finden Sie die Argumente, die Sie brauchen, um Ihr Recht zu durchzusetzen. <a href="#" onclick="document.getElementById('more').style.display='block';">Mehr...</a></p>
+          <p>Oft verweigern Behörden Auskünfte auf Anfragen von Journalisten. Sie berufen sich dabei in der Regel auf angebliche Ausnahmen nach den jeweils gültigen Landespressegesetzen. Dass viele dieser Antwortverweigerer damit das Gesetz brechen, ist meist unbekannt. In unserer Datenbank finden Sie die Argumente, die Sie brauchen, um Ihr Recht zu durchzusetzen. <a href="#" onclick="if(document.getElementById('more').style.display=='block'){this.innerHTML='Mehr...';document.getElementById('more').style.display='none';}else{this.innerHTML='Einklappen';document.getElementById('more').style.display='block';}return false;">Mehr...</a></p>
           <div style="display:none" id="more">
             <p>Häufig ist Unwissen der Grund für die Auskunftsverweigerung und nicht böser Wille. Denn die meisten Behörden sind schlicht unzureichend informiert, was sie sagen müssen und was sie verschweigen dürfen. Sie handeln aus Ahnungslosigkeit. Oft reicht es in diesen Fällen schon, die Auskunftsfreude zu erhören, wenn man den Behörden einen rechtlich fundierten Brief schickt, in dem man ihnen erklärt, warum sie reden müssen.</p>
 
